--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "app"]
-	path = app
+[submodule "gallery-directory-app"]
+	path = gallery-directory-app
 	url = git@github.com:amonks/gallery-directory-app.git
